--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@bookshop/sveltekit-bookshop": "^3.3.0",
 		"@cloudcannon/svelte-connector": "^1.0.3",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.48",
 		"@sveltejs/kit": "next",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
